--- a/k8s/release/vh/vh-user-api/values.yaml
+++ b/k8s/release/vh/vh-user-api/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+#replicaCount: 1
 
 image:
   repository: sdshmctspublic.azurecr.io/vh/vh-user-api
@@ -25,7 +25,7 @@ ingress:
     # kubernetes.io/tls-acme: "true"
   paths: []
   hosts:
-    - host: 'vh-user-api-dev.platform.hmcts.net'
+    - host: 'vh-user-api-dev.hearings.reform.hmcts.net'
       # paths: []
   tls: []
   #  - secretName: chart-example-tls
