--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -44,40 +44,40 @@ spec:
       - vh-user-api-identifieruris
       - vh-infra-core-AppInsightsKey
     env:
-      - name: "AdGroup:Administrator"
+      - name: "AdGroup__Administrator"
         value: "VirtualRoomAdministrator"
-      - name: "AdGroup:CaseType"
+      - name: "AdGroup__CaseType"
         value: "CaseType"
-      - name: "AdGroup:External"
+      - name: "AdGroup__External"
         value: "External"
-      - name: "AdGroup:Judge"
+      - name: "AdGroup__Judge"
         value: "VirtualRoomJudge"
-      - name: "AdGroup:JudgesTestGroup"
+      - name: "AdGroup__JudgesTestGroup"
         value: "TestAccount"
-      - name: "AdGroup:ProfessionalUser"
+      - name: "AdGroup__ProfessionalUser"
         value: "VirtualRoomProfessionalUser"
       - name: "APPINSIGHTS_PROFILERFEATURE_VERSION"
         value: "disabled"
       - name: "APPINSIGHTS_SNAPSHOTFEATURE_VERSION"
         value: "disabled"
       - name: "ApplicationInsights_InstrumentationKey"
-        value: "<azure-secret:vh-infra-core-AppInsightsKey>"
+        value: "<azure-secret__vh-infra-core-AppInsightsKey>"
       - name: "APPLICATIONINSIGHTS_CONNECTION_STRING"
-        value: "InstrumentationKey=<azure-secret:vh-infra-core-AppInsightsKey>"
+        value: "InstrumentationKey=<azure-secret__vh-infra-core-AppInsightsKey>"
       - name: "ApplicationInsightsAgent_EXTENSION_VERSION"
         value: "~2"
       - name: "AzureAd_ClientSecret"
-        value: "<azure-secret:vh-user-api-key>"
+        value: "<azure-secret__vh-user-api-key>"
       - name: "AzureAd_ClientId"
-        value: "<azure-secret:vh-user-api-appid>"
+        value: "<azure-secret__vh-user-api-appid>"
       - name: "AzureAd_TenantId"
-        value: "<azure-secret:TenantId>"
+        value: "<azure-secret__TenantId>"
       - name: "AzureAd_VhUserApiResourceId"
-        value: "<azure-secret:vh-user-api-identifieruris>"
-      - name: "ConnectionStrings:RedisCache"
-        value: "<azure-secret:redis-connection-str>"
+        value: "<azure-secret__vh-user-api-identifieruris>"
+      - name: "ConnectionStrings__RedisCache"
+        value: "<azure-secret__redis-connection-str>"
       - name: "DefaultPassword"
-        value: "<azure-secret:defaultpassword"
+        value: "<azure-secret__defaultpassword"
       - name: "DiagnosticServices_EXTENSION_VERSION" 
         value: "disabled"
       - name: "InstrumentationEngine_EXTENSION_VERSION"
@@ -91,38 +91,39 @@ spec:
       - name: "SnapshotDebugger_EXTENSION_VERSION"
         value: "disabled"
       - name: "TestDefaultPassword"
-        value: "<azure-secret:testdefaultpassword>"
-      - name: "Testing:ExistingEmail"
+        value: "<azure-secret__testdefaultpassword>"
+      - name: "Testing__ExistingEmail"
         value: "UserApiTestUser@a.com"
-      - name: "Testing:ExistingGroups:0:Displayname"
+      - name: "Testing__ExistingGroups__0__Displayname"
         value: "External"
-      - name: "Testing:ExistingGroups:0:GroupId"
+      - name: "Testing__ExistingGroups__0__GroupId"
         value: "121fa058-1796-4531-a9ee-63be1d4dc630"
-      - name: "Testing:ExistingGroups:1:Displayname"
+      - name: "Testing__ExistingGroups__1__Displayname"
         value: "UserApiTestGroup"
-      - name: "Testing:ExistingGroups:1:GroupId"
+      - name: "Testing__ExistingGroups__1__GroupId"
         value: "371ac75b-22b1-48d8-a3d8-f0587604d01f"
-      - name: "Testing:ExistingUserDisplayname"
+      - name: "Testing__ExistingUserDisplayname"
         value: "User Api Test User"
-      - name: "Testing:ExistingUserFirstname" 
+      - name: "Testing__ExistingUserFirstname" 
         value: "User"
-      - name: "Testing:ExistingUserId" 
+      - name: "Testing__ExistingUserId" 
         value: "948cb183-00cf-4251-8b13-6c39a1b0c25d"
-      - name: "Testing:ExistingUserLastname"
+      - name: "Testing__ExistingUserLastname"
         value: "Api"
-      - name: "Testing:ExistingUserPrincipal"
+      - name: "Testing__ExistingUserPrincipal"
         value: "UserApiTestUser@hearings.reform.hmcts.net"
-      - name: "Testing:NewGroups:0:Displayname" 
+      - name: "Testing__NewGroups__0__Displayname" 
         value: "NewUserApiTestGroup"
-      - name: "Testing:NewGroups:0:GroupId"
+      - name: "Testing__NewGroups__0__GroupId"
         value: "7d62cf17-c548-4a69-8f8f-4bc7fee90fbe"
-      - name: "VhServices:UserApiResourceId"
-        value: "https://vh-user-api-dev.azurewebsites.net"
-      - name: "VhServices:UserApiUrl" 
-        value: "https://vh-user-api-dev-staging.azurewebsites.net/"
+      - name: "VhServices__UserApiResourceId"
+        value: "https__//vh-user-api-dev.azurewebsites.net"
+      - name: "VhServices__UserApiUrl" 
+        value: "https__//vh-user-api-dev-staging.azurewebsites.net/"
       - name: "XDT_MicrosoftApplicationInsights_BaseExtensions"
         value: "disabled"
       - name: "XDT_MicrosoftApplicationInsights_Mode"
         value: "default"
-      - name: "ZapConfiguration:BuildConfigMode"
+      - name: "ZapConfiguration__BuildConfigMode"
         value: "Release"
+
