--- a/k8s/release/vh/vh-user-api/templates/ingress.yaml
+++ b/k8s/release/vh/vh-user-api/templates/ingress.yaml
@@ -9,6 +9,11 @@ metadata:
   name: {{ $fullName }}
   labels:
     {{- include "vh-user-api.labels" . | nindent 4 }}
+    app.kubernetes.io/name: {{ include "vh-user-api.name" . }}
+    app: {{ include "vh-user-api.name" . }}
+    helm.sh/chart: {{ include "vh-user-api.chart" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/managed-by: {{ .Release.Service }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
