--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -34,7 +34,7 @@ spec:
             {{- end }}
           env:          
               {{- range .Values.env }}
-            - name: {{ .name | quote }}
+            - name: {{ .name  }}
               value: {{ .value | quote }}
           {{- end }}
           ports:
