--- a/k8s/prod/releases/mi/mi-extraction-service-identity.yaml
+++ b/k8s/prod/releases/mi/mi-extraction-service-identity.yaml
@@ -5,8 +5,8 @@ metadata:
  namespace: mi
 spec:
  type: 0
- ResourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-extraction-service-prod-mi
- ClientID: eacf45b7-55e2-4f84-802f-024b2c5b9ca8
+ resourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-extraction-service-prod-mi
+ clientID: eacf45b7-55e2-4f84-802f-024b2c5b9ca8 # Subject to change from IaC
 
 ---
 
@@ -16,5 +16,5 @@ metadata:
   name: mi-extraction-service
   namespace: mi
 spec:
-  AzureIdentity: mi-extraction-service
-  Selector: mi-extraction-service
+  azureIdentity: mi-extraction-service
+  selector: mi-extraction-service
