--- a/k8s/prod/releases/mi/mi-house-keeping-service-identity.yaml
+++ b/k8s/prod/releases/mi/mi-house-keeping-service-identity.yaml
@@ -5,8 +5,9 @@ metadata:
  namespace: mi
 spec:
  type: 0
- ResourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-housekeeping-service-prod-mi
- ClientID: 6d008449-d685-42f7-b273-00f61f42dda6
+ resourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-housekeeping-service-prod-mi
+ clientID: 6d008449-d685-42f7-b273-00f61f42dda6 # Subject to change from IaC
+
 ---
 
 apiVersion: "aadpodidentity.k8s.io/v1"
@@ -15,5 +16,5 @@ metadata:
   name: mi-house-keeping-service
   namespace: mi
 spec:
-  AzureIdentity: mi-house-keeping-service
-  Selector: mi-house-keeping-service
+  azureIdentity: mi-house-keeping-service
+  selector: mi-house-keeping-service
