Used legacy charts but updated key vault settings

--- a/k8s/prod/releases/mi/mi-data-extractor-identity.yaml
+++ b/k8s/prod/releases/mi/mi-data-extractor-identity.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
  type: 0
  resourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-data-extactor-prod-mi
- clientID: e4249368-cf12-4a81-8a56-cef2c4473769 # Subject to change from IaC
+ clientID: e4249368-cf12-4a81-8a56-cef2c4473769
 
 ---
 
