--- a/k8s/prod/releases/mi/mi-extraction-service-identity.yaml
+++ b/k8s/prod/releases/mi/mi-extraction-service-identity.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
  type: 0
  resourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-extraction-service-prod-mi
- clientID: eacf45b7-55e2-4f84-802f-024b2c5b9ca8 # Subject to change from IaC
+ clientID: eacf45b7-55e2-4f84-802f-024b2c5b9ca8
 
 ---
 
