--- a/k8s/prod/releases/mi/mi-house-keeping-service-identity.yaml
+++ b/k8s/prod/releases/mi/mi-house-keeping-service-identity.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
  type: 0
  resourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-housekeeping-service-prod-mi
- clientID: 6d008449-d685-42f7-b273-00f61f42dda6 # Subject to change from IaC
+ clientID: 6d008449-d685-42f7-b273-00f61f42dda6
 
 ---
 
