--- a/k8s/prod/releases/mi/mi-staging-service-identity.yaml
+++ b/k8s/prod/releases/mi/mi-staging-service-identity.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
  type: 0
  resourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-staging-service-prod-mi
- clientID: 3af9f88d-f5fb-424b-bf01-211a631143e2 # Subject to change from IaC
+ clientID: 3af9f88d-f5fb-424b-bf01-211a631143e2
 
 ---
 
