--- a/k8s/charts/mi/mi-house-keeping-service/values.yaml
+++ b/k8s/charts/mi/mi-house-keeping-service/values.yaml
@@ -9,6 +9,12 @@ job:
   labels:
     app.kubernetes.io/instance : mi-house-keeping-service
     app.kubernetes.io/name: mi-house-keeping-service
+  keyVaults:
+    "mi-vault":
+      excludeEnvironmentSuffix: false
+      resourceGroup: mi-{{ .Values.global.environment }}-rg
+      secrets:
+      - appinsights-instrumentationkey
   environment:
     APPINSIGHTS_INSTRUMENTATIONKEY: DUMMY
     MI_CLIENT_ID: DUMMY
