--- a/k8s/charts/mi/mi-staging-service/values.yaml
+++ b/k8s/charts/mi/mi-staging-service/values.yaml
@@ -12,6 +12,12 @@ job:
     app.kubernetes.io/instance: mi-staging-service
     app.kubernetes.io/name: mi-staging-service
   ttlSecondsAfterFinished: 20
+  keyVaults:
+    "mi-vault":
+      excludeEnvironmentSuffix: false
+      resourceGroup: mi-{{ .Values.global.environment }}-rg
+      secrets:
+      - appinsights-instrumentationkey
   environment:
     APPINSIGHTS_INSTRUMENTATIONKEY: DUMMY
     MI_CLIENT_ID: DUMMY
