--- a/k8s/prod/releases/mi/mi-integration-service-identity.yaml
+++ b/k8s/prod/releases/mi/mi-integration-service-identity.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
  type: 0
  resourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-integration-service-prod-mi
- clientID: 60146a49-7399-4b18-b36c-576671c8f9bc # Subject to change from IaC
+ clientID: 60146a49-7399-4b18-b36c-576671c8f9bc
 
 ---
 
