--- a/k8s/prod/releases/mi/mi-house-keeping-service-identity.yaml
+++ b/k8s/prod/releases/mi/mi-house-keeping-service-identity.yaml
@@ -5,9 +5,8 @@ metadata:
  namespace: mi
 spec:
  type: 0
- resourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-housekeeping-service-prod-mi
- clientID: 6d008449-d685-42f7-b273-00f61f42dda6
-
+ ResourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-housekeeping-service-prod-mi
+ ClientID: 6d008449-d685-42f7-b273-00f61f42dda6
 ---
 
 apiVersion: "aadpodidentity.k8s.io/v1"
@@ -16,5 +15,5 @@ metadata:
   name: mi-house-keeping-service
   namespace: mi
 spec:
-  azureIdentity: mi-house-keeping-service
-  selector: mi-house-keeping-service
+  AzureIdentity: mi-house-keeping-service
+  Selector: mi-house-keeping-service
