--- a/k8s/prod/releases/mi/mi-staging-service-identity.yaml
+++ b/k8s/prod/releases/mi/mi-staging-service-identity.yaml
@@ -5,8 +5,8 @@ metadata:
  namespace: mi
 spec:
  type: 0
- resourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-staging-service-prod-mi
- clientID: 3af9f88d-f5fb-424b-bf01-211a631143e2
+ ResourceID: /subscriptions/5ca62022-6aa2-4cee-aaa7-e7536c8d566c/resourceGroups/mi-prod-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/mi-staging-service-prod-mi
+ ClientID: 3af9f88d-f5fb-424b-bf01-211a631143e2
 
 ---
 
@@ -16,5 +16,5 @@ metadata:
   name: mi-staging-service
   namespace: mi
 spec:
-  azureIdentity: mi-staging-service
-  selector: mi-staging-service
+  AzureIdentity: mi-staging-service
+  Selector: mi-staging-service
