--- a/k8s/prod/releases/mi/mi-extraction-service.yaml
+++ b/k8s/prod/releases/mi/mi-extraction-service.yaml
@@ -37,7 +37,7 @@ spec:
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
         MI_CLIENT_ID: eacf45b7-55e2-4f84-802f-024b2c5b9ca8
-        SFTP_ENABLED: false
+        SFTP_ENABLED: true
         SFTP_FORCECHECK: true
         SFTP_REMOTE_HOST: 10.24.254.130
         SFTP_REMOTE_PORT: 22
