Kustomize aad pod identity

--- a/k8s/environments/demo/cluster-00-overlay/kustomization.yaml
+++ b/k8s/environments/demo/cluster-00-overlay/kustomization.yaml
@@ -6,6 +6,7 @@ bases:
 - ../../../release/admin/kured
 - ../../../release/admin/keyvault-flexvol
 - ../../../release/admin/secrets-csi-driver
+- ../../../namespaces/admin/aad-pod-identity
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
