--- a/k8s/environments/stg/cluster-01-overlay/kustomization.yaml
+++ b/k8s/environments/stg/cluster-01-overlay/kustomization.yaml
@@ -7,6 +7,7 @@ bases:
 - ../../../release/admin/keyvault-flexvol
 - ../../../release/admin/secrets-csi-driver
 - ../../../namespaces/azure-devops
+- ../../../namespaces/admin/aad-pod-identity
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
