--- a/k8s/environments/test/cluster-01-overlay/kustomization.yaml
+++ b/k8s/environments/test/cluster-01-overlay/kustomization.yaml
@@ -8,6 +8,7 @@ bases:
 - ../../../release/admin/secrets-csi-driver
 - ../../../namespaces/azure-devops
 - ../../../namespaces/admin/aad-pod-identity
+- ../../../namespaces/kube-system/aad-pod-identity
 # - ../../../release/admin/env-injector
 # - ../../../release/kube-system/nodelocaldns
 
