--- a/k8s/namespaces/kube-system/aad-pod-identity/mic-exception.yaml
+++ b/k8s/namespaces/kube-system/aad-pod-identity/mic-exception.yaml
@@ -1,8 +1,7 @@
 apiVersion: "aadpodidentity.k8s.io/v1"
 kind: AzurePodIdentityException
 metadata:
-  name: mic-exception
+  name: aks-addon-exception
 spec:
   podLabels:
-    app: mic
-    component: mic
+    kubernetes.azure.com/managedby: aks
