--- a/k8s/release/vh/vh-user-api/templates/ingress.yaml
+++ b/k8s/release/vh/vh-user-api/templates/ingress.yaml
@@ -38,7 +38,7 @@ spec:
           - path: {{ . }}
             backend:
               serviceName: {{ $fullName }}
-              servicePort: {{ $svcPort }}
+              servicePort: http
   {{- end }}
   {{- end }}
 {{- end }}
