--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
-  name: vh-user-api-dev
+  name: vh-user-api
   namespace: vh
   annotations:
     flux.weave.works/automated: "true"
@@ -30,7 +30,12 @@ spec:
       - /
       tls: []
       hosts:
-      - 'vh-user-api-dev.hearings.reform.hmcts.net'
+      - 'vh-user-api.dev.platform.hmcts.net'
+
+    readinessProbe:
+      enabled: false
+    livenessProbe:
+      enabled: false
     keyvaults:
     - name: vhinfracorehtdev
       resourcegroup: vh-infra-core-dev
@@ -44,86 +49,88 @@ spec:
       - vh-user-api-identifieruris
       - vh-infra-core-AppInsightsKey
     env:
-      - name: AdGroup:Administrator
+      - name: "AdGroup__Administrator"
         value: "VirtualRoomAdministrator"
-      - name: AdGroup:CaseType
+      - name: "AdGroup__CaseType"
         value: "CaseType"
-      - name: AdGroup:External
+      - name: "AdGroup__External"
         value: "External"
-      - name: AdGroup:Judge
+      - name: "AdGroup__Judge"
         value: "VirtualRoomJudge"
-      - name: AdGroup:JudgesTestGroup
+      - name: "AdGroup__JudgesTestGroup"
         value: "TestAccount"
-      - name: AdGroup:ProfessionalUser
+      - name: "AdGroup__ProfessionalUser"
         value: "VirtualRoomProfessionalUser"
-      - name: APPINSIGHTS_PROFILERFEATURE_VERSION
+      - name: "APPINSIGHTS_PROFILERFEATURE_VERSION"
         value: "disabled"
-      - name: APPINSIGHTS_SNAPSHOTFEATURE_VERSION
+      - name: "APPINSIGHTS_SNAPSHOTFEATURE_VERSION"
         value: "disabled"
-      - name: ApplicationInsights_InstrumentationKey
+      - name: "ApplicationInsights_InstrumentationKey"
         value: "<azure-secret:vh-infra-core-AppInsightsKey>"
-      - name: APPLICATIONINSIGHTS_CONNECTION_STRING
+      - name: "APPLICATIONINSIGHTS_CONNECTION_STRING"
         value: "InstrumentationKey=<azure-secret:vh-infra-core-AppInsightsKey>"
-      - name: ApplicationInsightsAgent_EXTENSION_VERSION
+      - name: "ApplicationInsightsAgent_EXTENSION_VERSION"
         value: "~2"
-      - name: AzureAd_ClientSecret
+      - name: "AzureAd_ClientSecret"
         value: "<azure-secret:vh-user-api-key>"
-      - name: AzureAd_ClientId
+      - name: "AzureAd_ClientId"
         value: "<azure-secret:vh-user-api-appid>"
-      - name: AzureAd_TenantId
+      - name: "AzureAd_TenantId"
         value: "<azure-secret:TenantId>"
-      - name: AzureAd_VhUserApiResourceId
+      - name: "AzureAd_VhUserApiResourceId"
         value: "<azure-secret:vh-user-api-identifieruris>"
-      - name: ConnectionStrings:RedisCache
+      - name: "ConnectionStrings:RedisCache"
         value: "<azure-secret:redis-connection-str>"
-      - name: DefaultPassword
+      - name: "DefaultPassword"
         value: "<azure-secret:defaultpassword"
       - name: DiagnosticServices_EXTENSION_VERSION
         value: "disabled"
-      - name: InstrumentationEngine_EXTENSION_VERSION
+      - name: "DisableHttpsRedirection"
+        value: "true"
+      - name: "InstrumentationEngine_EXTENSION_VERSION"
         value: "disabled"
-      - name: IsLive
+      - name: "IsLive"
         value: "False"
-      - name: MSDEPLOY_RENAME_LOCKED_FILES
+      - name: "MSDEPLOY_RENAME_LOCKED_FILES"
         value: "1"
-      - name: ReformEmail
+      - name: "ReformEmail"
         value: "hearings.reform.hmcts.net"
-      - name: SnapshotDebugger_EXTENSION_VERSION
+      - name: "SnapshotDebugger_EXTENSION_VERSION"
         value: "disabled"
-      - name: TestDefaultPassword
+      - name: "TestDefaultPassword"
         value: "<azure-secret:testdefaultpassword>"
-      - name: Testing:ExistingEmail
+      - name: "Testing_ExistingEmail"
         value: "UserApiTestUser@a.com"
-      - name: Testing:ExistingGroups:0:Displayname
+      - name: "Testing_ExistingGroups_0_Displayname"
         value: "External"
-      - name: Testing:ExistingGroups:0:GroupId
+      - name: "Testing_ExistingGroups_0_GroupId"
         value: "121fa058-1796-4531-a9ee-63be1d4dc630"
-      - name: Testing:ExistingGroups:1:Displayname
+      - name: "Testing_ExistingGroups_1_Displayname"
         value: "UserApiTestGroup"
-      - name: Testing:ExistingGroups:1:GroupId
+      - name: "Testing_ExistingGroups_1_GroupId"
         value: "371ac75b-22b1-48d8-a3d8-f0587604d01f"
-      - name: Testing:ExistingUserDisplayname
+      - name: "Testing_ExistingUserDisplayname"
         value: "User Api Test User"
-      - name: Testing:ExistingUserFirstname
+      - name: "Testing_ExistingUserFirstname"
         value: "User"
-      - name: Testing:ExistingUserId
+      - name: "Testing_ExistingUserId"
         value: "948cb183-00cf-4251-8b13-6c39a1b0c25d"
-      - name: Testing:ExistingUserLastname
+      - name: "Testing_ExistingUserLastname"
         value: "Api"
-      - name: Testing:ExistingUserPrincipal
+      - name: "Testing:ExistingUserPrincipal"
         value: "UserApiTestUser@hearings.reform.hmcts.net"
-      - name: Testing:NewGroups:0:Displayname
+      - name: "Testing__NewGroups__0__Displayname"
         value: "NewUserApiTestGroup"
-      - name: Testing:NewGroups:0:GroupId
+      - name: "Testing__NewGroups__0__GroupId"
         value: "7d62cf17-c548-4a69-8f8f-4bc7fee90fbe"
-      - name: VhServices:UserApiResourceId
+      - name: "VhServices__UserApiResourceId"
         value: "https://vh-user-api-dev.azurewebsites.net"
-      - name: VhServices:UserApiUrl
+      - name: "VhServices__UserApiUrl"
         value: "https://vh-user-api-dev-staging.azurewebsites.net/"
-      - name: XDT_MicrosoftApplicationInsights_BaseExtensions
+      - name: "XDT_MicrosoftApplicationInsights_BaseExtensions"
         value: "disabled"
-      - name: XDT_MicrosoftApplicationInsights_Mode
+      - name: "XDT_MicrosoftApplicationInsights_Mode"
         value: "default"
-      - name: ZapConfiguration:BuildConfigMode
+      - name: "ZapConfiguration:BuildConfigMode"
         value: "Release"
 
