--- a/k8s/release/vh/vh-user-api/values.yaml
+++ b/k8s/release/vh/vh-user-api/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: sdshmctspublic.azurecr.io/vh/vh-user-api
   pullPolicy: Always
   # Overrides the image tag whose default is the chart version.
-  tag: "v0.1"
+  tag: "v0.2"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -25,13 +25,13 @@ volumeMounts:
 
 ingress:
   enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations: 
+     kubernetes.io/ingress.class: traefik
+
   paths: []
   hosts:
-    - host: 'vh-user-api-dev.hearings.reform.hmcts.net'
-      # paths: []
+    - host: 'vh-user-api.dev.platform.hmcts.net'
+    
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
