--- a/k8s/prod/releases/mi/mi-integration-service.yaml
+++ b/k8s/prod/releases/mi/mi-integration-service.yaml
@@ -19,26 +19,92 @@ spec:
   values:
     job:
       image: ssprivateprod.azurecr.io/mi-integration-service:prod-0c90d42
-      suspend: false
+      suspend: true
       kind: CronJob
       schedule: '15 1 * * *'
       activeDeadlineSeconds: 82800 #23 hours
       labels:
         app.kubernetes.io/instance: mi-integration-service-job
         app.kubernetes.io/name: mi-integration-service-job
+      keyVaults:
+        "mi-vault":
+          excludeEnvironmentSuffix: false
+          resourceGroup: mi-{{ .Values.global.environment }}-rg
+          secrets:
+          - appinsights-instrumentationkey
+          - notify-api-key-cmc
+          - notify-api-key-divorce
+          - notify-api-key-idam
+          - notify-api-key-probate
+          - notify-api-key-sscs
+          - eightbyeight-api-user
+          - eightbyeight-api-password
+          - payment-db-host
+          - payment-db-user
+          - payment-db-password
+          - payment-bs-db-host
+          - payment-bs-db-user
+          - payment-bs-db-password
+          - payment-fees-db-host
+          - payment-fees-db-user
+          - payment-fees-db-password
+          - payment-bar-db-host
+          - payment-bar-db-user
+          - payment-bar-db-password
       environment:
+        MI_CLIENT_ID: ee31a18f-45e9-41db-881d-5976695188fb
         APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
         DATA_SOURCE_CCD: true
-        MI_CLIENT_ID: 60146a49-7399-4b18-b36c-576671c8f9bc
+        DATA_SOURCE_NOTIFY: true
+        DATA_SOURCE_EIGHTBYEIGHT: true
+        DATA_SOURCE_PAYMENT: true
+        GOV_UK_NOTIFY_ENABLED_CMC: true
+        GOV_UK_NOTIFY_ENABLED_DIVORCE: true
+        GOV_UK_NOTIFY_ENABLED_IDAM: true
+        GOV_UK_NOTIFY_ENABLED_PROBATE: true
+        GOV_UK_NOTIFY_ENABLED_SSCS: true
         MI_VALIDATE_ALL_LANDING_BLOBS: true
       smoketests:
         image: ssprivateprod.azurecr.io/mi-integration-service:prod-0c90d42
         enabled: true
       testsConfig:
+        keyVaults:
+          "mi-vault":
+            excludeEnvironmentSuffix: false
+            resourceGroup: mi-{{ .Values.global.environment }}-rg
+            secrets:
+            - appinsights-instrumentationkey
+            - notify-api-key-cmc
+            - notify-api-key-divorce
+            - notify-api-key-idam
+            - notify-api-key-probate
+            - notify-api-key-sscs
+            - eightbyeight-api-user
+            - eightbyeight-api-password
+            - payment-db-host
+            - payment-db-user
+            - payment-db-password
+            - payment-bs-db-host
+            - payment-bs-db-user
+            - payment-bs-db-password
+            - payment-fees-db-host
+            - payment-fees-db-user
+            - payment-fees-db-password
+            - payment-bar-db-host
+            - payment-bar-db-user
+            - payment-bar-db-password
         environment:
-          MI_CLIENT_ID: 60146a49-7399-4b18-b36c-576671c8f9bc
+          MI_CLIENT_ID: ee31a18f-45e9-41db-881d-5976695188fb
           APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
           DATA_SOURCE_CCD: true
+          DATA_SOURCE_NOTIFY: true
+          DATA_SOURCE_EIGHTBYEIGHT: true
+          DATA_SOURCE_PAYMENT: true
+          GOV_UK_NOTIFY_ENABLED_CMC: true
+          GOV_UK_NOTIFY_ENABLED_DIVORCE: true
+          GOV_UK_NOTIFY_ENABLED_IDAM: true
+          GOV_UK_NOTIFY_ENABLED_PROBATE: true
+          GOV_UK_NOTIFY_ENABLED_SSCS: true
     global:
       subscriptionId: "5ca62022-6aa2-4cee-aaa7-e7536c8d566c"
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
