--- a/k8s/environments/prod/cluster-00/mi/mi-extraction-service.yaml
+++ b/k8s/environments/prod/cluster-00/mi/mi-extraction-service.yaml
@@ -38,7 +38,7 @@ spec:
       environment:
         APPINSIGHTS_INSTRUMENTATIONKEY: "8bfa6e68-ae68-442c-a237-83cde3b092f3"
         MI_CLIENT_ID: e8a52cff-ef0c-4447-baf2-665c3480d0de
-        SFTP_ENABLED: true
+        SFTP_ENABLED: false
         SFTP_FORCECHECK: true
         SFTP_REMOTE_HOST: 10.24.254.130
         SFTP_REMOTE_PORT: 22
