--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -49,4 +49,4 @@ spec:
           - vh-user-api-identifieruris
           - vh-infra-core-AppInsightsKey
     env:
-      AdGroup__Administrator: "VirtualRoomAdministrator"
+      AdGroup__Administrator: VirtualRoomAdministrator
