--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -49,4 +49,5 @@ spec:
           - vh-user-api-identifieruris
           - vh-infra-core-AppInsightsKey
     env:
-      AdGroup:Administrator: VirtualRoomAdministrator
+      - name: AdGroup__Administrator 
+        value: "VirtualRoomAdministrator"
