--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -49,5 +49,5 @@ spec:
           - vh-user-api-identifieruris
           - vh-infra-core-AppInsightsKey
     env:
-      - name: AdGroup__Administrator
+      - name: "AdGroupAdministrator"
         value: "VirtualRoomAdministrator"
