--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -34,8 +34,8 @@ spec:
                 {{toYaml .Values.volumeMounts | indent 10}}
             {{- end}}
           env:
-            - name: AdGroup__Administrator
-              value: {{ .Values.env.AdGroup__Administrator | quote }}
+            - name: "AdGroup__Administrator"
+              value: {{ .Values.env.AdGroupAdministrator | quote }}
           ports:
             - name: http
               containerPort: 80
