--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -35,7 +35,7 @@ spec:
             {{- end}}
           env:
             - name: "AdGroup__Administrator"
-              value: {{ .Values.env.AdGroupAdministrator | quote }}
+              value: {{ .Values.env.AdGroup__Administrator | quote }}
           ports:
             - name: http
               containerPort: 80
