--- a/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
+++ b/k8s/environments/dev/common/video-hearings/vh-user-api.yaml
@@ -64,8 +64,8 @@ spec:
       AzureAd_ClientId: "<azure-secret:vh-user-api-appid>"
       AzureAd_TenantId: "<azure-secret:TenantId>"
       AzureAd_VhUserApiResourceId: "<azure-secret:vh-user-api-identifieruris>"
-      ConnectionStrings:RedisCache: "<azure-secret:redis-connection-str>"
-      DefaultPassword: "<azure-secret:defaultpassword"
+      ConnectionStrings__RedisCache: "<azure-secret:redis-connection-str>"
+      DefaultPassword: "<azure-secret:defaultpassword>"
       DiagnosticServices_EXTENSION_VERSION: "disabled"
       DisableHttpsRedirection: "true"
       InstrumentationEngine_EXTENSION_VERSION: "disabled"
