--- a/k8s/release/vh/vh-user-api/templates/deployment.yaml
+++ b/k8s/release/vh/vh-user-api/templates/deployment.yaml
@@ -36,6 +36,94 @@ spec:
           env:
             - name: "AdGroup__Administrator"
               value: {{ .Values.env.AdGroup__Administrator | quote }}
+            - name: "AdGroup__CaseType"
+              value: {{ .Values.env.AdGroup__CaseType | quote }}
+            - name: "AdGroup__External"
+              value: {{ .Values.env.AdGroup__External | quote }}
+            - name: "AdGroup__Judge"
+              value: {{ .Values.env.AdGroup__Judge | quote }}
+            - name: "AdGroup__JudgesTestGroup"
+              value: {{ .Values.env.AdGroup__JudgesTestGroup | quote }}  
+            - name: "AdGroup__ProfessionalUser"
+              value: {{ .Values.env.AdGroup__JudgesTestGroup | quote }}  
+            - name: "APPINSIGHTS_PROFILERFEATURE_VERSION"
+              value: {{ .Values.env.APPINSIGHTS_PROFILERFEATURE_VERSION | quote }}
+            - name: "APPINSIGHTS_SNAPSHOTFEATURE_VERSION"
+              value: {{ .Values.env.APPINSIGHTS_SNAPSHOTFEATURE_VERSION | quote }}
+            - name: "ApplicationInsights_InstrumentationKey"
+              value: {{ .Values.env.ApplicationInsights_InstrumentationKey | quote }}
+            - name: "APPLICATIONINSIGHTS_CONNECTION_STRING"
+              value: {{ .Values.env.APPLICATIONINSIGHTS_CONNECTION_STRING | quote }}
+            - name: "ApplicationInsightsAgent_EXTENSION_VERSION"
+              value: {{ .Values.env.ApplicationInsightsAgent_EXTENSION_VERSION | quote }}
+            - name: "AzureAd__ClientSecret"
+              value: {{ .Values.env.AzureAd_ClientSecret | quote }}
+            - name: "AzureAd__ClientId"
+              value: {{ .Values.env.AzureAd__ClientId | quote }}
+            - name: "AzureAd__TenantId"
+              value: {{ .Values.env.AzureAd__TenantId | quote }}
+            - name: "AzureAd_VhUserApiResourceId"
+              value: {{ .Values.env.AzureAd_VhUserApiResourceId | quote }}
+            - name: "ConnectionStrings__RedisCache"
+              value: {{ .Values.env.ConnectionStrings__RedisCache | quote }}
+            - name: "DefaultPassword"
+              value: {{ .Values.env.DefaultPassword | quote }}
+            - name: DiagnosticServices_EXTENSION_VERSION
+              value: {{ .Values.env.DiagnosticServices_EXTENSION_VERSION | quote }}
+            - name: "DisableHttpsRedirection"
+              value: {{ .Values.env.DisableHttpsRedirection | quote }}
+            - name: "InstrumentationEngine_EXTENSION_VERSION"
+              value: {{ .Values.env.InstrumentationEngine_EXTENSION_VERSION | quote }}
+            - name: "IsLive"
+              value: {{ .Values.env.IsLive | quote }}
+            - name: "MSDEPLOY_RENAME_LOCKED_FILES"
+              value: {{ .Values.env.MSDEPLOY_RENAME_LOCKED_FILES | quote }}
+            - name: "ReformEmail"
+              value: {{ .Values.env.ReformEmail | quote }}
+            - name: "SnapshotDebugger_EXTENSION_VERSION"
+              value: {{ .Values.env.SnapshotDebugger_EXTENSION_VERSION | quote }}
+            - name: "TestDefaultPassword"
+              value: {{ .Values.env.TestDefaultPassword | quote }}
+            - name: "Testing__ExistingEmail"
+              value: {{ .Values.env.Testing__ExistingEmail | quote }}
+            - name: "Testing__ExistingGroups__0__Displayname"
+              value: {{ .Values.env.Testing__ExistingGroups__0__Displayname | quote }}
+            - name: "Testing__ExistingGroups__0__GroupId"
+              value: {{ .Values.env.Testing__ExistingGroups__0__GroupId | quote }}
+            - name: "Testing__ExistingGroups__1__Displayname"
+              value: {{ .Values.env.Testing__ExistingGroups__1__Displayname | quote }}
+            - name: "Testing_ExistingGroups__1__GroupId"
+              value: {{ .Values.env.Testing_ExistingGroups__1__GroupId | quote }}
+            - name: "Testing__ExistingUserDisplayname"
+              value: {{ .Values.env.Testing__ExistingUserDisplayname | quote }}
+            - name: "Testing__ExistingUserFirstname"
+              value: {{ .Values.env.Testing__ExistingUserFirstname | quote }}
+            - name: "Testing__ExistingUserId"
+              value: {{ .Values.env.Testing__ExistingUserId | quote }}
+            - name: "Testing__ExistingUserLastname"
+              value: {{ .Values.env.Testing__ExistingUserLastname | quote }}
+            - name: "Testing__ExistingUserPrincipal"
+            value: {{ .Values.env.Testing__ExistingUserPrincipal | quote }}
+            - name: "Testing__NewGroups__0__Displayname"
+            value: {{ .Values.env.Testing__NewGroups__0__Displayname | quote }}
+            - name: "Testing__NewGroups__0__GroupId"
+            value: {{ .Values.env.Testing__NewGroups__0__GroupId | quote }}
+            - name: "VhServices__UserApiResourceId"
+            value: {{ .Values.env.VhServices__UserApiResourceId | quote }}
+            - name: "VhServices__UserApiUrl"
+            value: {{ .Values.env.VhServices__UserApiUrl | quote }}
+            - name: "XDT_MicrosoftApplicationInsights_BaseExtensions"
+            value: {{ .Values.env.XDT_MicrosoftApplicationInsights_BaseExtensions | quote }}
+            - name: "XDT_MicrosoftApplicationInsights_Mode"
+            value: {{ .Values.env.XDT_MicrosoftApplicationInsights_Mode | quote }}
+            - name: "ZapConfiguration__BuildConfigMode"
+            value: {{ .Values.env.ZapConfiguration__BuildConfigMode | quote }}
+
+
+
+
+
+
           ports:
             - name: http
               containerPort: 80
